modify CVV.md for 201903071406

--- a/9.CCV.md
+++ b/9.CCV.md
@@ -1,4 +1,4 @@
-#云计算与虚拟化
+﻿#云计算与虚拟化
 <pre>
 #传统的数据中心面临的问题：
 电子商务网站：工信部备案，公安部备案，ICP备案，ICP证
@@ -70,15 +70,83 @@ root      2890  0.0  0.0 112708   972 pts/0    S+   23:05   0:00 grep --color=au
 注:kvm默认帮你安装启动了dnsmasq(开源工具),这个服务有dns和dhcp的功能,会给你的虚拟机分配ip和dns
 
 现在要在kvm上安装一个虚拟机,需要安装一个vnc的客户端,自己先安装好
-[root@Linux-node1-salt ~]# qemu-img create -f raw /opt/CenOS-7-x86_64.raw 10G   #raw虚拟机镜像的格式,是一种裸磁盘,镜像给10G大
-Formatting '/opt/CenOS-7-x86_64.raw', fmt=raw size=10737418240
+[root@Linux-node1-salt ~]# qemu-img create -f raw /opt/CentOS-7-x86_64.raw 10G   #raw虚拟机镜像的格式,是一种裸磁盘,镜像给10G大小，就是整个虚拟机的硬盘大小 
+Formatting '/opt/CentOS-7-x86_64.raw', fmt=raw size=10737418240
 
 在kvm上安装虚拟机:
 [root@Linux-node1-salt ~]# yum install -y virt-install #先安装装虚拟机的工具
+[root@Linux-node1-salt ~]# scp 192.168.1.19:/Share/Info/Linux/Centos7.5.iso /opt #复制iso到/opt下
 安装虚拟机:
- virt-install --virt-type kvm --name CentOS-7-x86_64 --ram 2048 --cdrom=/opt/CentOS-7-x86_64.iso --disk path=/opt/CenOS-7-x86_64.raw --network network=default --graphics vnc,listen=0.0.0.0 --noautoconsole
+ virt-install --virt-type kvm --name CentOS-7-x86_64 --ram 2048 --cdrom=/opt/Centos7.5.iso  --disk path=/opt/CentOS-7-x86_64.raw --network network=default --graphics vnc,listen=0.0.0.0 --noautoconsole
 
 netstat -tnlp | grep kvm  #查看开启vnc的服务端口
-再然后赶紧用vnc客户端连上去安装Centos7系统,光标停留在Install CentOS7上,按tab键进入设置,在quiet后面添加net.ifnames=0 biosdevname=0 使网上名称为eth0
+再然后赶紧用vnc客户端连上去安装Centos7系统,vnc的ip地址不是192.168.122.1,而是这个虚拟机的ip192.168.1.233,光标停留在Install CentOS7上,按tab键进入设置,在quiet后面添加net.ifnames=0 biosdevname=0 使网上名称为eth0
+注：如果没有来得急vnc连接上，连上后你先可以选退出，然后服务器重新创建虚拟机，再重新连接即可。
+[root@Linux-node1-salt opt]# virt-install --virt-type kvm --name CentOS-7.5-x86_64 --ram 2048 --cdrom=/opt/Centos7.5.iso  --disk path=/opt/CentOS-7-x86_64.raw --network network=default --graphics vnc,listen=0.0.0.0 --noautoconsole
+ERROR    Disk /opt/CentOS-7-x86_64.raw is already in use by other guests ['CentOS-7-x86_64']. (Use --check path_in_use=off or --check all=off to override) #由于刚才退出过，有重名，所以这里会报错，提示使用--check path_in_use=off覆盖原先的参数
+[root@Linux-node1-salt opt]# virt-install --virt-type kvm --name CentOS-7.5-x86_64 --ram 2048 --cdrom=/opt/Centos7.5.iso  --disk path=/opt/CentOS-7-x86_64.raw --network network=default --graphics vnc,listen=0.0.0.0 --noautoconsole --check path_in_use=off
+WARNING  Disk /opt/CentOS-7-x86_64.raw is already in use by other guests ['CentOS-7-x86_64'].
+
+[root@Linux-node1-salt ~]# virsh list --all   #安装系统完成后vnc会断开，这时候需要进入到192.168.1.233中查看虚拟机
+ Id    Name                           State
+----------------------------------------------------
+ -     CentOS-7-x86_64                shut off
+ -     CentOS-7.5-x86_64              shut off
+[root@Linux-node1-salt opt]# virsh start  CentOS-7-x86_64 #启动虚拟机
+[root@Linux-node1-salt opt]# virsh dominfo CentOS-7-x86_64  #查看虚拟机信息
+Id:             5
+Name:           CentOS-7-x86_64
+UUID:           e05cc42a-9619-49c6-bad5-c01495bc8cf0
+OS Type:        hvm
+State:          running
+CPU(s):         1
+CPU time:       17.9s
+Max memory:     2097152 KiB
+Used memory:    2097152 KiB
+Persistent:     yes
+Autostart:      disable
+Managed save:   no
+Security model: none
+Security DOI:   0
+[root@Linux-node1-salt opt]# virsh dominfo  CentOS-7.5-x86_64 
+Id:             -
+Name:           CentOS-7.5-x86_64
+UUID:           79d2437f-f372-44eb-8a7e-dc8700056b0c
+OS Type:        hvm
+State:          shut off
+CPU(s):         1
+Max memory:     2097152 KiB
+Used memory:    2097152 KiB
+Persistent:     yes
+Autostart:      disable
+Managed save:   no
+Security model: none
+Security DOI:   0
+
+[root@Linux-node1-salt opt]# virsh undefine 79d2437f-f372-44eb-8a7e-dc8700056b0c #删除CentOS-7.5-x86_64虚拟机
+Domain 79d2437f-f372-44eb-8a7e-dc8700056b0c has been undefined
+
+[root@Linux-node1-salt opt]# virsh list --all
+ Id    Name                           State
+----------------------------------------------------
+ 5     CentOS-7-x86_64                running
+
+镜像制件：去掉/dev下的网络规则，网卡的mac地址和UUID去掉
+
+删除虚拟机
+virsh shutdown kvm-1 #关机虚拟机
+virsh destroy kvm-1  #断电虚拟机
+virsh undefine kvm-1  #删除虚拟机
+rm /dev/vg_shkvm1/kvm-1  # 不建议删除硬盘
+
+yum install -y acpid acpid-sysvinit #当使用virsh shutdown kvm无法关机时，安装好插件后可关机 
+[root@Linux-node1-salt opt]# service acpid start
+[root@Linux-node1-salt opt]# systemctl enable acpid
+[root@Linux-node1-salt opt]# virsh destroy Windows-10-x86  #无法关机时强制断电
+[root@Linux-node1-salt opt]# virsh suspend CentOS-7-x86_64   #暂停虚拟机
+Domain CentOS-7-x86_64 suspended
+[root@Linux-node1-salt opt]# virsh resume CentOS-7-x86_64    #恢复虚拟机
+Domain CentOS-7-x86_64 resumed
+
 
 </pre>
