--- a/9.CCV.md
+++ b/9.CCV.md
@@ -1,4 +1,4 @@
-﻿#云计算与虚拟化
+#云计算与虚拟化
 <pre>
 #传统的数据中心面临的问题：
 电子商务网站：工信部备案，公安部备案，ICP备案，ICP证
@@ -139,14 +139,46 @@ virsh destroy kvm-1  #断电虚拟机
 virsh undefine kvm-1  #删除虚拟机
 rm /dev/vg_shkvm1/kvm-1  # 不建议删除硬盘
 
-yum install -y acpid acpid-sysvinit #当使用virsh shutdown kvm无法关机时，安装好插件后可关机 
-[root@Linux-node1-salt opt]# service acpid start
-[root@Linux-node1-salt opt]# systemctl enable acpid
-[root@Linux-node1-salt opt]# virsh destroy Windows-10-x86  #无法关机时强制断电
-[root@Linux-node1-salt opt]# virsh suspend CentOS-7-x86_64   #暂停虚拟机
-Domain CentOS-7-x86_64 suspended
-[root@Linux-node1-salt opt]# virsh resume CentOS-7-x86_64    #恢复虚拟机
-Domain CentOS-7-x86_64 resumed
+#libvirt
+libvirt：kvm管理工具，xen,vmware,virtualbox等都可以管理。有libvirt API，openstack来基于这个API来调用kvm的。libvirt挂了不影响虚拟机的使用，只是不能管理虚拟机了。
+[root@Linux-node1-salt ~]# ls /etc/libvirt/qemu/ #查看虚拟机的xml
+CentOS-7-x86_64.xml  networks  Windows-10-x86.xml
+[root@Linux-node1-salt ~]# cat /etc/libvirt/qemu/CentOS-7-x86_64.xml   #libvirt虚拟机的配置参数。
+virsh dumpxml CentOS-7-x86_64 > backup.xml  #备份虚拟机xml
+virsh undifine CentOS-7-x86_64 #删除虚拟机
+virsh list --all #此时还在。关机后真的没了
+virsh shutdown CentOS-7-x86_64 #关机
+virsh list --all #此时没有CentOS-7-x86_64这个虚拟机了
+virsh define backup.xml #恢复CentOS-7-x86_64虚拟机，如果当时在删除这个虚拟机的时候删除了硬盘，则这个操作不能恢复虚拟机
+virsh suspend CentOS-7-x86_64 #暂停
+virsh resumed CentOS-7-x86_64 #恢复
+virsh snapshot-create CentOS-7-x86_64 #创建快照，不支持raw格式硬盘快照
 
+#编辑虚拟机的cpu：
+[root@Linux-node1-salt ~]# head /etc/libvirt/qemu/CentOS-7-x86_64.xml
+<!--
+WARNING: THIS IS AN AUTO-GENERATED FILE. CHANGES TO IT ARE LIKELY TO BE
+OVERWRITTEN AND LOST. Changes to this xml configuration should be made using:
+  virsh edit CentOS-7-x86_64  #提示使用这个命令来更改虚拟机参数
+or other application using the libvirt API.
+-->
+
+<domain type='kvm'>
+  <name>CentOS-7-x86_64</name>
+  <uuid>e05cc42a-9619-49c6-bad5-c01495bc8cf0</uuid>
+
+ virsh edit CentOS-7-x86_64  #编辑虚拟机参数
+<vcpu placement='auto' current='1'>4</vcpu> #把static改成auto动态的，现在的cpu为1核，最大为4核
+virsh setvcpus CentOS-7-x86_64 2 --live  #不用重启虚拟机就可以改cpu个数（虚拟机cpu模式必须是auto,而不是static,否则此命令失效。如果为static模式只能先关机，再开启虚拟机。最后就可以使用这个命令了，cpu只能添加不能缩小）
+#编辑虚拟机的内存
+[root@Linux-node1-salt ~]# virsh --help | grep monitor
+    qemu-monitor-command           QEMU Monitor Command
+    qemu-monitor-event             QEMU Monitor Events
+ Domain Monitoring (help keyword 'monitor')
+[root@Linux-node1-salt ~]# virsh qemu-monitor-command CentOS-7-x86_64 --hmp --cmd balloon 1024  #更改内存到1024M，最大内存为之前设置的静态内存大小，不能超过2G
+[root@Linux-node1-salt ~]# virsh qemu-monitor-command CentOS-7-x86_64 --hmp --cmd info balloon #查看虚拟机现在的内存大小
+balloon: actual=1024
+#编辑虚拟机的硬盘
+硬盘支持resize扩容，但是不建议resize扩容。系统盘一定不能扩，数据备不建议扩，数据盘扩的时候一定要备份数据，如果要扩容建议添加硬盘。
 
 </pre>
