--- a/9.CCV.md
+++ b/9.CCV.md
@@ -205,6 +205,20 @@ bridge name     bridge id               STP enabled     interfaces
 virbr0          8000.5254008d87d3       yes             virbr0-nic
                                                         vnet0  #网桥virbr0-nic接口下的网络接口
 注：kvm默认是NAT模式，生产要用桥接模式。把NAT模式变成桥接，生产是要用脚本来跑的
+脚本：
+--------------
+#!/bin/bash
+brctl addbr br0 
+brctl addif br0 eth0
+ip addr del dev eth0 192.168.1.233/24
+ifconfig br0 192.168.1.233/24 up
+route add default gw 192.168.1.254
+echo "nameserver 114.114.114.114" >> /etc/resolv.conf
+if [ #? == 0 ] {
+echo "seccessful"
+} else {echo "faild"} fi
+--------------
+
 [root@Linux-node1-salt opt]# brctl addbr br0  #增加网桥br0
 [root@Linux-node1-salt opt]# brctl show #查看新添加的网桥
 bridge name     bridge id               STP enabled     interfaces
