add container to Docker

--- a/10.Docker.md
+++ b/10.Docker.md
@@ -41,13 +41,76 @@ REPOSITORY          TAG                 IMAGE ID            CREATED             
 docker.io/centos    latest              1e1148e4cc2c        3 months ago        202 MB
 [root@Linux-node1-salt ~]# docker save -o centos.tar centos #导出centos镜像到centos.tar
 [root@Linux-node1-salt ~]# docker load --import centos.tar #导入安装centos
+[root@Linux-node1-salt ~]# docker load < centos.tar #导入安装centos
 [root@Linux-node1-salt ~]# docker rmi image_id  #删除镜像
+[root@Linux-node1-salt ~]# docker run centos echo 'hello world' #运行centos并执行命令。镜像的名称必须在所有选项的后面，执行的命令可以有也可以没有。
+[root@Linux-node1-salt ~]# docker ps -a #查看所以的容器状态
+CONTAINER ID        IMAGE               COMMAND                CREATED             STATUS                     PORTS               NAMES
+2e64ed511299        centos              "echo 'hello world'"   2 minutes ago       Exited (0) 2 minutes ago                       boring_dubinsky
+[root@Linux-node1-salt ~]# docker run --name my-docker -t -i centos /bin/bash #运行cnetos容器，并设置容器名称，打开伪终端，打开输入，最后执行命令
+[root@Linux-node1-salt ~]# docker ps -a
+CONTAINER ID        IMAGE               COMMAND                CREATED                                                                                                     STATUS                      PORTS               NAMES
+e3a540a4b30b        centos              "/bin/bash"            5 minutes ago                                                                                               Exited (0) 5 seconds ago                        my-docker
+cc9b6726f55f        centos              "/bin/bash"            6 minutes ago                                                                                               Exited (0) 6 minutes ago                        mydocker
+2e64ed511299        centos              "echo 'hello world'"   10 minutes ago                                                                                              Exited (0) 10 minutes ago                       boring_dubinsky
+[root@Linux-node1-salt ~]# docker start my-docker #开启叫my-docker的容器
+my-docker
+[root@Linux-node1-salt ~]# docker ps -a
+CONTAINER ID        IMAGE               COMMAND                CREATED                                                                                                     STATUS                      PORTS               NAMES
+e3a540a4b30b        centos              "/bin/bash"            6 minutes ago                                                                                               Up 4 seconds  #已经开启了                                  my-docker
+cc9b6726f55f        centos              "/bin/bash"            8 minutes ago                                                                                               Exited (0) 8 minutes ago                        mydocker
+2e64ed511299        centos              "echo 'hello world'"   12 minutes ago                                                                                              Exited (0) 12 minutes ago                       boring_dubinsky
+[root@Linux-node1-salt ~]# docker attach my-docker #进入容器，退出就退出了，不可靠。
+[root@Linux-node1-salt ~]# nsenter #这个工具要安装，yum install -y util-linux可以安装，默认linux已经安装了，nsenter意为进入命名空间（name space enter）.
+[root@Linux-node1-salt ~]# docker inspect -f "{{ .State.Pid }}" my-docker #查看容器叫my-docker的pid。如果pid为0则表示这个容器没有启动
+14261
+[root@Linux-node1-salt ~]# nsenter -t 14261 -m -u -i -n -p #进入容器
+[root@e3a540a4b30b /]# ps -ef
+UID        PID  PPID  C STIME TTY          TIME CMD
+root         1     0  0 13:41 ?        00:00:00 /bin/bash
+root        16     0  0 13:43 ?        00:00:00 -bash  #通过nsenter新加的一个bash,退出时，pid为1的主bash还在运行着，所以这个是可靠的
+root        38    16  0 13:44 ?        00:00:00 ps -ef
+[root@e3a540a4b30b /]# exit
+logout
+[root@Linux-node1-salt ~]# docker ps
+CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS              PORTS               NAMES
+e3a540a4b30b        centos              "/bin/bash"         45 minutes          Up 5 minutes                            my-docker
+[root@Linux-node1-salt ~]# cat docker_in.sh  #进入docker的脚本
+---------------
+#!/bin/bash
 
+#Use nsenter to access docker
 
+docker_in(){
+        NAME_ID=$1
+        PID=$(docker inspect -f '{{ .State.Pid }}' $NAME_ID)
+        nsenter -t $PID -m -u -i -n -p
+}
 
+docker_in $1
+---------------
+[root@Linux-node1-salt ~]# docker exec my-docker whoami  #只执行一次不登录容器时使用
+root
+[root@Linux-node1-salt ~]# docker exec -it my-docker /bin/bash #通过这种方式也可以进入容器，退出容器时也不影响容器工作
+[root@e3a540a4b30b /]# ps aux
+USER       PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
+root         1  0.0  0.0  11820  1696 ?        Ss+  13:41   0:00 /bin/bash
+root        77  0.6  0.0  11820  1860 ?        Ss   13:59   0:00 /bin/bash #新开bash
+root        92  0.0  0.0  51740  1736 ?        R+   13:59   0:00 ps aux
+[root@Linux-node1-salt ~]# docker rm  my-docker #删除停止的容器
+[root@Linux-node1-salt ~]# docker rm  -f my-docker  #删除正在运行的容器
+[root@Linux-node1-salt ~]# docker run --rm centos echo "hehe" #运行容器执行echo后删除容器
+[root@Linux-node1-salt ~]# docker run -d nginx  #运行nginx在后台并输出容器ID
+1e4d6d3d5d73ec3876d9267dbbbd55060c978522cebdb8354b0c0f94ffbb6b68
+[root@Linux-node1-salt ~]# docker logs boring_lumiere  #查看容器的日志
 
-
-
+#Docker能干什么
+简化配置，代码流水线，提高开发效率，隔离应用，整合服务器，调度能力，多租户环境，快速部署。
+面向产品：产品交付
+面向开发：简化环境配置
+面向测试：多版本测试
+面向运维：环境一致性
+面向架构：自动化扩容（微服务）
 
 
 
