--- a/10.Docker.md
+++ b/10.Docker.md
@@ -464,11 +464,11 @@ CMD ["/usr/bin/supervisord","-c","/etc/supervisord.conf"] #容器运行的默认
 3.设置身份验证
 4.proxy_pass 5000
 5.启动regestry容器并映射端口：docker run -d -p 5000:5000 --name registry registry:2 
-![](https://i.imgur.com/cxj7W7c.jpg)
+![docker](https://i.imgur.com/tstYpPr.jpg)
 #HARBOR--企业级的分布式docker regestry，vmware写的（生产用这个）
 https://github.com/goharbor/harbor
 https://goharbor.io/docs/
-
+![docker](https://i.imgur.com/tstYpPr.jpg)
 
 
 
