--- a/10.Docker.md
+++ b/10.Docker.md
@@ -468,6 +468,16 @@ CMD ["/usr/bin/supervisord","-c","/etc/supervisord.conf"] #容器运行的默认
 #HARBOR--企业级的分布式docker regestry，vmware写的（生产用这个）
 https://github.com/goharbor/harbor
 https://goharbor.io/docs/
+#安装Harbor:
+两台宿主机：192.168.1.233,192.168.1.238
+
+
+
+#Docker hub仓库管理
+[root@Linux-node1-salt ~]# docker run -d --name shop-api jack/shop-api supervisord -c /etc/supervisord.conf
+[root@Linux-node1-salt ~]# docker commit abe2940bee46 jackli5689/jack
+[root@Linux-node1-salt ~]# docker login 
+[root@Linux-node1-salt ~]# docker push jackli5689/jack:python-ssh-v1
 
 </pre>
 
