--- a/2.Zabbix.md
+++ b/2.Zabbix.md
@@ -1,4 +1,4 @@
-#Zabbix
+﻿#Zabbix
 
 
 ####SecureCRT
@@ -248,14 +248,14 @@ IBM的nmon工具可生成性能报表
 
 ###添加Zabbix自定义监控项
 ####拿nginx来监控
-1. vim /etc/zabbix/zabbix_agentd.d.conf  可查看到include=/etc/zabbix/zabbix_agentd.d,此目录下所有配置将备引用，所以在/etc/zabbix/zabbix_agentd.d目录下新建一个nginx应用监控的配置文件nginx.active,用来当作nginx的监控项
+1. vim /etc/zabbix/zabbix_agentd.conf  可查看到include=/etc/zabbix/zabbix_agentd.d,此目录下所有配置将备引用，所以在/etc/zabbix/zabbix_agentd.d目录下新建一个nginx应用监控的配置文件nginx.active,用来当作nginx的监控项
 2. 编辑/etc/zabbix/zabbix_agentd.d/nginx.conf文件
  <pre>vim /etc/zabbix/zabbix_agentd.d/nginx.conf
 UserParameter=nginx.active,/usr/bin/curl -s http://192.168.1.201:8080/nginx-status |grep 'Active' | awk '{print $NF}' </pre>
 3. systemctl restart zabbix-agent
 4. yum install zabbix-get -y 
-5. vim /etc/zabbix/zabbix-agentd.conf  #把Server=127.0.0.1设置成192.168.1.201，这样下一步才不会报错
-6. zabbix_get -s 192.168.1.201 -p 10050 -k "nginx.active"  #测试获取值是否设置成功
+5. vim /etc/zabbix/zabbix-agentd.conf  #把Server=127.0.0.1设置成192.168.1.201，这样下一步才不会报错，server地址为zabbix-server地址
+6. zabbix_get -s 192.168.1.201 -p 10050 -k "nginx.active"  #在zabbix-server上测试获取值是否设置成功，-s指的是zabbix-agent的地址
 7. 在zabbix-web界面上创建item监控项。
 
 ###Zabbix最后部分
@@ -524,7 +524,7 @@ WEB监控（不依赖zabbix agent,zabbix server自带的）
 </pre>
 <pre>
 针对zabbix agent来说，有两种模式
-1. 被动模式（默认模式zabbix-aget）
+1. 被动模式（默认模式zabbix-agent）
 2. 主动模式 （zabbix-agent(active)）
 什么时候切换为主动模式？
 1. 当队列的item 1分钟、5分钟、10分钟有延迟时
