--- a/2.Zabbix.md
+++ b/2.Zabbix.md
@@ -250,13 +250,34 @@ IBM的nmon工具可生成性能报表
 ####拿nginx来监控
 1. vim /etc/zabbix/zabbix_agentd.conf  可查看到include=/etc/zabbix/zabbix_agentd.d,此目录下所有配置将备引用，所以在/etc/zabbix/zabbix_agentd.d目录下新建一个nginx应用监控的配置文件nginx.active,用来当作nginx的监控项
 2. 编辑/etc/zabbix/zabbix_agentd.d/nginx.conf文件
- <pre>vim /etc/zabbix/zabbix_agentd.d/nginx.conf
-UserParameter=nginx.active,/usr/bin/curl -s http://192.168.1.201:8080/nginx-status |grep 'Active' | awk '{print $NF}' </pre>
+vim /etc/zabbix/zabbix_agentd.d/nginx.conf
+UserParameter=nginx.active,/usr/bin/curl -s http://192.168.1.233/nginx_status |grep 'Active' | awk '{print $NF}'
 3. systemctl restart zabbix-agent
-4. yum install zabbix-get -y 
+4. yum install zabbix-get -y  #必须在server端执行
 5. vim /etc/zabbix/zabbix-agentd.conf  #把Server=127.0.0.1设置成192.168.1.201，这样下一步才不会报错，server地址为zabbix-server地址
 6. zabbix_get -s 192.168.1.201 -p 10050 -k "nginx.active"  #在zabbix-server上测试获取值是否设置成功，-s指的是zabbix-agent的地址
 7. 在zabbix-web界面上创建item监控项。
+	1. 数据更新间隔(秒) 60
+	2. 自定义时间间隔 50 1-7,00:00-24:00
+	3. 历史数据保留时长（单位天) 90
+	4. 趋势数据存储周期(单位天) 365
+	5. 新的应用集 nginx   #对item做分组
+	6. 描述 Nginx活动连接数
+	7. 键值 nginx.active
+	8. 类型 zabbix agent
+	9. 
+8. 创建图形：选择主机，进入图形菜单，新建图形，图形类别，选中刚刚创建的item监控项
+#网络监控：Smokeping
+#流量分析系统：Piwik 
+#注：解决zabbix字体无法显示中文问题，找到一个中文字体替换zabbix默认字体，路径：/usr/share/zabbix/fonts
+[root@zabbix fonts]# mv graphfont.ttf graphfont.ttf.bak
+[root@zabbix fonts]# mv simhei.ttf graphfont.ttf
+
+{zabbix.jack.com:net.if.out[eth0].last(0)} #在map中添加标签，net.if.out[eth0]为item上的key
+[root@zabbix fonts]# zabbix_get -s 192.168.1.233 -k "mysql.ping"
+1
+[root@lnmp zabbix_agentd.d]# /usr/sbin/zabbix_agentd -t 'mysql.ping' -c /etc/zabbix/zabbix_agentd.d/mysql.conf 
+mysql.ping  
 
 ###Zabbix最后部分
 #####通知（配置--动作下设置）
