--- a/2.Zabbix.md
+++ b/2.Zabbix.md
@@ -1,6 +1,6 @@
-﻿#Zabbix
+#Zabbix
 
-
+<pre>
 ####SecureCRT
 yum install -y lrzsz   	#安装secretCRT中的rz上传和sz下载
 
@@ -469,10 +469,8 @@ UserParameter=linux_status[*],/etc/zabbix/zabbix_agentd.d/zabbix_linux_plugin.sh
 7.  zabbix_get -s 192.168.1.201 -k linux_status[nginx_status,8080,active]  #用get测试一下
 8. 创建模板，机器太多无法创建很多个item,所以创建模板
 9. 链接模板到主机
-</pre>
 
 ####媒体介质添加
-<pre>
 用脚本添加短信通知
 1. vim /etc/zabbix/zabbix_server.conf可查看到警告脚本路径：AlertScriptsPath=/usr/lib/zabbix/alertscripts
 2. 编写短信脚本在警告脚本路径下
@@ -487,20 +485,18 @@ echo $ALERT_TO >> /tmp/sms.log
 echo $ALERT_TITLE >> /tmp/sms.log
 echo $ALERT_BODY >> /tmp/sms.log
 ###############
+添加媒介为脚本类型，指定名称脚本 sms.sh（自己会去AlertScriptsPath=/usr/lib/zabbix/alertscripts查找），如有需要添加脚本参数：{ALERT.SENDTO}[用户属性中的媒体]、{ALERT.SUBJECT}[动作里面的主题]、{ALERT.MESSAGE}[动作的信息]
 3. 在要监控的主机上添加item项和图形---然后设置触发器---设置动作（actions），并设置动作上的发信内容和发信方式及对象---最后在对象用户上设置接收媒体的类型
 
-</pre>
-<pre>
-用脚本添加微信通知
+
+#用脚本添加微信通知
 1.企业注册企业号，拥有唯一的key
 2.在linux中设置脚本，使用curl连接微信API发送微信报警
-</pre>
-<pre>
+
 移值监控项
 如果要把自定义item监控项移值到其他agent服务器上，只需要复制/etc/zabbix/zabbix_agentd.d/下的zabbix_linux_plugin.sh和linux.conf，还有/etc/zabbix/zabbix_agentd.conf 即可，然后可以在zabbix-server上用命令zabbix_get测试是否成功连接
-</pre>
-<pre>
-使用Percona监控插件监控mysql（自己实操失败）
+
+#使用Percona监控插件监控mysql（自己实操失败）#查看官方文档
 1. 安装percona监控插件源:
 yum install http://www.percona.com/downloads/percona-release/redhat/0.1-3/percona-release-0.1-3.noarch.rpm
 2. 安装percona监控插件及所有的组件
@@ -514,34 +510,34 @@ $mysql_pass = 's3cret';`
 405647
 7. 关联模板到主机中
 注意事项：当zabbix中监控没有图数据时，大部分是/tmp下的文件zabbix没有写入的文件
-</pre>
-<pre>
-WEB监控（不依赖zabbix agent,zabbix server自带的）
+
+#WEB监控（不依赖zabbix agent,zabbix server自带的）
 1. 在zabbix web中，点击目标主机旁边的web进行设置监控
 2. 点击右上角新建方案
-3. 设置方案名称，更新间隔时间，要监听的网址，最大超时时间等
-4. 设置触发器
-</pre>
-<pre>
-针对zabbix agent来说，有两种模式
+3. 设置方案名称，更新间隔时间，要监听的网址，最大超时时间，需要返回的状态码200等
+4. 设置触发器，设置表达式为web的返回响应代码。
+5. 如果需要设置认证，在步骤选项上添加post的用户名及密码
+
+#针对zabbix agent来说，有两种模式
 1. 被动模式（默认模式zabbix-agent）
 2. 主动模式 （zabbix-agent(active)）
 什么时候切换为主动模式？
-1. 当队列的item 1分钟、5分钟、10分钟有延迟时
+1. 当队列（Queue）的item 1分钟、5分钟、10分钟有延迟时
 2. 当zabbix server监控300+服务器时（针对普通服务器配置）
+3. 主动模式可以不受防火墙的影响
 怎么设置为主动模式？（实操失败）
 1. 在zabbix agent机器中，设置配置文件
 [root@linux-node1 ~]# vim /etc/zabbix/zabbix_agentd.conf 
 #Server=192.168.1.201   #注释被动模式
- StartAgents=0  #关闭agent监听端口
+StartAgents=0  #关闭agent监听端口
 ServerActive=192.168.1.201  #设置主动模式zabbix server地址
-Hostname=linux-node1	#设置本地agent主机名
+Hostname=linux-node1	#设置本地agent主机名，唯一标识
 2. [root@linux-node1 ~]# systemctl restart zabbix-agent
-3. 在zabbix server上添加agent主机，并关联主动模式（zabbix agent (active)）的模板即可,因为默认无主动模式的模板，所以只能用全部克隆功能来克隆一个模板，并（mass update）批量更新来更改（type）类型为zabbix agent (active)模式。
-4. 由于是主动模式，所以在主机添加完成后，主机界面ZBX图标是不亮的，而如果是被动模式则是开的
-</pre>
+3. 在zabbix server上添加agent主机，并关联主动模式（zabbix agent (active)）的模板即可,因为默认无主动模式的模板（从模板中的item中可以看出item的类型为zabbix-agent），所以只能用全部克隆功能来克隆一个模板，并（mass update）批量更新来更改（type）类型为zabbix agent (active)模式。
+4. 由于是主动模式，所以在主机添加完成后，主机界面ZBX图标是不亮的(跟item的key：agent.ping有关)，而如果是被动模式则是开的
+
 ###zabbix proxy
-<pre>
+#zabbix proxy没有触发器，不发报警，不能执行远程命令，只做收集，需要单独数据库
 zabbix proxy不仅能解决主机多的问题还能解决跨机房的问题
 zabbix proxy不能跟zabbix server装在一台机器上，而且zabbix proxy必须是单独的数据库
 安装 zabbix proxy:
@@ -555,14 +551,15 @@ grant all on zabbix_proxy.* to zabbix_proxy@localhost identified by 'zabbix_prox
 cd /usr/share/doc/zabbix-proxy-mysql-3.0.3/
 zcat schema.sql.gz | mysql -uzabbix_proxy -p zabbix_proxy
 #vim /etx/zabbix/zabbix-proxy.conf
-Server=192.168.1.201	#server的地址
-Hostname=192.168.1.234    #proxy的地址
+Server=192.168.1.201	#agent server的地址
+Hostname=192.168.1.234    #agent proxy的地址
 DBHost=localhost        
 DBName-zabbix_proxy
 DBUser=zabbix_proxy
 DBPassword=zabbix_proxy
 
-systemctl start zabbix-proxy  #zabbix-proxy端口是10051
+systemctl start zabbix-proxy  #zabbix-proxy端口是10051,和zabbix server端口一样，是简化版的zabbix server
+zabbix-proxy他zabbix-agent也可以设置主动和被动模式
 
 附Server(1),Proxy(2),Agent(3)的配置信息
 #############
@@ -608,17 +605,16 @@ ServerActive=192.168.1.234
 Hostname=192.168.1.233       ##要么写localhost,要么写IP，其他名称因为没有DNS，所以解析不出来，Hostname都一样
 Include=/etc/zabbix/zabbix_agentd.d/*.conf
 #############
-</pre>
+
 
 ###自动化监控
-<pre>
-1. 自动注册
+1. 自动注册(zabbix server基于zabbix agent的主动模式)
 	1. Zabbix Agent自动添加
-2. 主动发现
+2. 主动发现(zabbix server基于zabbix agent的被动模式)
 	2.1 自动发现Discovery
 	2.2 Zabbix API
 #######自动注册操作：
-1. 在Agent中更改配置，关闭Agent被动模式，并设置StartAgent=0,然后设置主动模式的ServerActive地址。最后设置HostMetadataItem或者HostMetadata，HostMetadata是手动设置值，例：HostMetadata=Linux。HostMetadataItem是Zabbix Server 使用key来自动获取是windows还是linux,例如HostMetadataItem=system.uname
+1. 在Agent中更改配置，关闭Agent被动模式，并设置StartAgent=0,然后设置主动模式的ServerActive地址。最后设置HostMetadataItem或者HostMetadata，HostMetadata是手动设置值，例：HostMetadata=Linux。HostMetadataItem是Zabbix Server 使用key来自动获取值，例如HostMetadataItem=system.uname
 #vim /etc/zabbix/zabbix_agentd.conf
 [root@linux-node1 ~]# grep '^[a-Z]'  /etc/zabbix/zabbix_agentd.conf             
 PidFile=/var/run/zabbix/zabbix_agentd.pid
@@ -627,13 +623,15 @@ LogFileSize=0
 StartAgents=0
 ServerActive=192.168.1.201
 Hostname=192.168.1.233
-HostMetadataItem=system.uname
+HostMetadataItem=system.uname  #告诉server我的特征，和HostMetadata二选一，system.uname相当于在shell上执行uname功能
 Include=/etc/zabbix/zabbix_agentd.d/*.conf
 
-2. 然后去Zabbix Server Web界面里面添加Action自动注册功能，设置匹配到的系统名称，例：(Host name) like (Linux) ,并设置相应的操作1.添加操作，2.添加主机到组中，3.添加相匹配的模板
+2. 然后去Zabbix Server Web界面里面Action选项添加自动注册功能（另外有tigger,自动发现），设置匹配到的系统名称，例：(Host metadata) like (Linux) ,并设置添加操作(添加主机，添加到某个主机组，添加相匹配的模板)
 3. 查看自动成功添加的模板图形
 
 ##########主动发现操作---2.1 自动发现Discovery：(实操失败)
+在zabbix server web上Discovery选项上添加一个自动发现规则，设定发现地址段、agent端口、key等信息
+在再Action上添加一个discovery类型的action
 1. 在Agent中更改配置，关闭Agent主动模式，并设置StartAgent=3(表示开户Agent监听端口，等于0则表示禁用端口),然后设置被动模式的Active地址。
 2. #vim /etc/zabbix/zabbix_agentd.conf
 [root@linux-node1 ~]# grep '^[a-Z]'  /etc/zabbix/zabbix_agentd.conf             
@@ -907,12 +905,5 @@ print zabbix_ret
 执行的结果：
 [root@cobbler-Zabbix ~]# python zabbix_host_create.py
 {u'jsonrpc': u'2.0', u'result': {u'hostids': [u'10132']}, u'id': 1}
-
-</pre>
-
-
-</pre>
-
-
 
 </pre>
