--- a/2.Zabbix.md
+++ b/2.Zabbix.md
@@ -968,6 +968,12 @@ UserParameter=route-yw.ping,/usr/bin/ping -c 3 -W 1 122.226.124.58 | grep -c 'ic
 [root@zabbix zabbix_agentd.d]# cat web.conf 
 UserParameter=smbweb.ping,curl -u jack:jackli -m 10 -o /dev/null -s -w %{http_code} http://192.168.1.19/server-status/
 #然后在对应的主机上增加item，并设置图表和触发器即可实现
-
+[root@lnmp zabbix_agentd.d]# cat nginx.conf 
+UserParameter=nginx.active,/usr/bin/curl -s http://192.168.1.233/nginx_status |grep 'Active' | awk '{print $NF}'
+UserParameter=nginx.server,/usr/bin/curl -s http://192.168.1.233/nginx_status | awk '{print $1}' | awk 'NR==3{print}'
+UserParameter=nginx.accepts,/usr/bin/curl -s http://192.168.1.233/nginx_status | awk '{print $2}' | awk 'NR==3{print}'
+UserParameter=nginx.handled,/usr/bin/curl -s http://192.168.1.233/nginx_status | awk '{print $3}' | awk 'NR==3{print}'
+UserParameter=nginx.reading,/usr/bin/curl -s http://192.168.1.233/nginx_status | awk '{print $2}' | awk 'NR==4{print}'
+UserParameter=nginx.writing,/usr/bin/curl -s http://192.168.1.233/nginx_status | awk '{print $4}' | awk 'NR==4{print}'
 
 </pre>
