--- a/2.Zabbix.md
+++ b/2.Zabbix.md
@@ -1,4 +1,4 @@
-#Zabbix
+﻿#Zabbix
 
 <pre>
 ####SecureCRT
@@ -290,7 +290,9 @@ mysql.ping
 2. 使用IPMI监控服务器硬件
 3. 使用Agent监控服务器
 4. 使用JMX监控java
-5. 监控Mysql
+5. 
+
+
 6. 监控Web状态
 7. 监控Nginx状态
 #SNMP,监控交换机等snmp设备 
@@ -517,15 +519,32 @@ echo $ALERT_BODY >> /tmp/sms.log
 yum install http://www.percona.com/downloads/percona-release/redhat/0.1-3/percona-release-0.1-3.noarch.rpm
 2. 安装percona监控插件及所有的组件
 yum install -y percona-zabbix-templates php php-mysql
-3. 导入模板var/lib/zabbix/percona/templates/zabbix_agent_template_percona_mysql_server_ht_2.0.9-sver1.1.8.xml到zabbix server web上的模板库上（此模板导入会错误，需从网上自己找zabbix3.0的模板）
+3. 导入模板/var/lib/zabbix/percona/templates/zabbix_agent_template_percona_mysql_server_ht_2.0.9-sver1.1.8.xml到zabbix server web上的模板库上（此模板导入会错误，需从网上自己找zabbix3.0的模板）
 4. 复制配置文件/var/lib/zabbix/percona/templates/userparameter_percona_mysql.conf到/etc/zabbix/zabbix_agentd.d/下
 5. 在/var/lib/zabbix/percona/scripts/目录下新建ss_get_mysql_stats.php.cnf文件，并输入值`<?php
 $mysql_user = 'root';
 $mysql_pass = 's3cret';`
-6. 测试脚本 /var/lib/zabbix/percona/scripts/get_mysql_stats_wrapper.sh gg
-405647
+6. 测试脚本 /var/lib/zabbix/percona/scripts/get_mysql_stats_wrapper.sh gg 
+405647  #如何未有值是表示连接不上mysql.sock。ERROR: Can't connect to local MySQL server through socket '/var/lib/mysql/mysql.sock' (2)
 7. 关联模板到主机中
 注意事项：当zabbix中监控没有图数据时，大部分是/tmp下的文件zabbix没有写入的文件，可以在zabbix server是使用zabbix_get工具测试一下
+
+
+#使用Percona监控插件监控mysql,需要查看官方文档
+yum install https://www.percona.com/downloads/percona-monitoring-plugins/1.1.6/percona-zabbix-templates-1.1.6-1.noarch.rpm
+yum install -y php php-mysql
+[root@lnmp templates]# sz zabbix_agent_template_percona_mysql_server_ht_2.0.9-sver1.1.6.xml #导出模板到windows
+导入模板/var/lib/zabbix/percona/templates/zabbix_agent_template_percona_mysql_server_ht_2.0.9-sver1.1.6.xml到zabbix server web上的模板库上（此模板导入会错误，格式错误，需要从2.4导出来使用，需从网上自己找zabbix3.0的模板）##链接：https://pan.baidu.com/s/1j4-zgBgTTaqh-gGNAaeIlw 提取码：w4az  链接：https://pan.baidu.com/s/17nEADrpEyPVXWRi_mikCLA 提取码：dfio
+cp /var/lib/zabbix/percona/templates/userparameter_percona_mysql.conf /etc/zabbix/zabbix_agentd.d/
+在/var/lib/zabbix/percona/scripts/目录下新建ss_get_mysql_stats.php.cnf文件，并输入值:
+[root@lnmp scripts]# cat ss_get_mysql_stats.php.cnf 
+<?php
+$mysql_user = 'root';
+$mysql_pass = 'root123';
+[root@lnmp templates]# ll /tmp/
+total 4
+-rw-rw-r-- 1 zabbix zabbix 1245 Jul  1 16:45 localhost-mysql_cacti_stats.txt  #确定此文件为zabbix权限 
+
 
 #WEB监控（不依赖zabbix agent,zabbix server自带的）
 1. 在zabbix web中，点击目标主机旁边的web进行设置监控
@@ -955,3 +974,40 @@ UserParameter=nginx.reading,/usr/bin/curl -s http://192.168.1.233/nginx_status |
 UserParameter=nginx.writing,/usr/bin/curl -s http://192.168.1.233/nginx_status | awk '{print $4}' | awk 'NR==4{print}'
 
 </pre>
+
+###源码安装zabbix
+[root@zabbix2 download]# wget https://nchc.dl.sourceforge.net/project/zabbix/ZABBIX%20Latest%20Stable/3.0.28/zabbix-3.0.28.tar.gz
+[root@zabbix2 download]# tar xf zabbix-3.0.28.tar.gz 
+[root@zabbix2 zabbix-3.0.28]# yum install -y mariadb-server mariadb mariadb-devel
+[root@zabbix2 download]#  cd zabbix-3.0.28/
+[root@zabbix2 zabbix-3.0.28]# ./configure --prefix=/usr/local/zabbix --enable-server --enable-agent --with-mysql --enable-ipv6 --with-net-snmp --with-libcurl --with-libxml2  #编辑安装zabbix server和agent
+注：自Zabbix 3.0.0版本起，SMTP认证需要--with-libcurl 配置选项，同时要求cURL 7.20.0或者更改版本。\\自Zabbix 2.2.0版本起，虚拟机监控需 --with-libcurl 和 --with-libxml2 配置选项。
+configure: error: Invalid Net-SNMP directory - unable to find net-snmp-config
+[root@zabbix2 zabbix-3.0.28]# yum install -y net-snmp-devel 
+configure: error: Curl library not found
+[root@zabbix2 zabbix-3.0.28]# yum install libcurl-devel -y
+[root@zabbix2 zabbix-3.0.28]# make install 
+[root@zabbix2 zabbix-3.0.28]# sbin/zabbix_server
+sbin/zabbix_server: error while loading shared libraries: libmysqlclient.so.18: cannot open shared o
+[root@zabbix2 sbin]# locate libmysqlclient.so.18
+/usr/lib64/mysql/libmysqlclient.so.18
+/usr/lib64/mysql/libmysqlclient.so.18.0.0
+[root@zabbix2 sbin]# cat /etc/ld.so.conf.d/mysql.conf 
+/usr/local/mysql/lib
+[root@zabbix2 sbin]# ldconfig
+
+MariaDB [(none)]> create database zabbix;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
