--- a/3.Saltstack.md
+++ b/3.Saltstack.md
@@ -330,6 +330,7 @@ linux-node1:
 grains:
   roles: apache
 
+##需要刷新grains参数：[root@SaltstackServer /srv/salt]# salt '*' saltutil.sync_grains 
 #修改后：
 [root@SaltstackServer /srv/salt]# salt '*' grains.item roles
 linux-node1:
@@ -344,8 +345,6 @@ SaltstackServer.com:
 [root@linux-node1 yum.repos.d]# vim /etc/salt/grains  #这个路径下的grains文件minion自己会找
 	cloud: openstack
 [root@SaltstackServer /srv/salt]# salt '*' saltutil.sync_grains  #在master上刷新所有minion的信息，使信息为最新无论minion哪种方式修改都会成功
-SaltstackServer.com:
-linux-node1:
 [root@SaltstackServer /srv/salt]# salt '*' grains.item cloud  #在master刷新或在minion上重启minion后可查看到更改的item
 SaltstackServer.com:
     ----------
@@ -362,7 +361,7 @@ base:
   'linux-node1':
     - web.apache
   'roles:apache':
-    - math: grain
+    - match: grain
     - web.apache
 
 ###自定义grains
