--- a/5.Saltstack.md
+++ b/5.Saltstack.md
@@ -288,7 +288,7 @@ rz:上传    sz：下载
 salt实战：
 首先头脑风暴：
 1. 系统初始化
-2. 功能模板：设置单独的目录，haproxy,nginx,php,mysql,memcached,尽可能的全、独立
+2. 功能模板：设置单独的目录,nginx,php,mysql,memcached,尽可能的全、独立
 3. 业务模块：根据业务类型划分，例如web服务。论坛bbs，然后用include包括进来
 干活：
 salt环境配置：开发、测试（功能测试、性能测试）、预生产、生产
