modify salt and del CNAME file

--- a/5.Saltstack.md
+++ b/5.Saltstack.md
@@ -247,7 +247,7 @@ mysql-service:
 - template: jinja
 2. 你要列出参数列表
 - defaults:
-  PORT: 88  #指定POST变量值为88
+  PORT: 88  #指定PORT变量值为88
 3. 模板引用
 {{ PORT }} #在source文件中添加jinja格式的变量
 
@@ -1908,37 +1908,32 @@ file_roots:
 pillar_roots:
   base: /srv/pillar/base
 第三步：本地编写sls文件
-第四步：salt-sall --local state.highstate
-###一键安装master:cobbler自动化安装时已经安装好salt-minion,在minion上执行salt-sall --local state.highstate执行master状态文件安装，使本机安装并配置好master
+第四步：salt-call --local state.highstate
+###一键安装master:cobbler自动化安装时已经安装好salt-minion,在minion上执行salt-call --local state.highstate执行master状态文件安装，使本机安装并配置好master
 
 ###多master，Multi-Master
-
 共享：（1.可以使用NFS共享，只限内网指定IP连接2.把共享的信息放到git上，再重装个master[用得不多可以用一个master]）
 1. keys (master,minion的公钥和私钥)
 2. file_roots的文件
 3. pillar_roots的文件
-
 minion的配置：
 master:
   - 192.168.1.235
   - 192.168.1.236
 
-
 ##salt syndic   --类似于zabbix的代理一样
+[root@saltsrv ~]# yum install salt-syndic -y
 salt syndic必须运行在master上，
 syndic没有配置文件，通过master配置来更改。
-vim /etc/salt/master配置文件:
-syndic_master: 192.168.56.12 --设置比当前的master还高级的master
-
-systemctl restart salt-masterm  --重启服务
-systemctl restart salt-syndic   --重启服务
-这个时候192.168.56.11变成syndic了
-
-192.168.56.12安装master，vim /etc/salt/master：
-order_masters: True  --开启当前master的代理功能
-systemctl restart salt-masterm
-
-top mastert和syndic的工作流程：
+vim /etc/salt/master编辑配置文件:
+syndic_master: 192.168.56.12 --设置高级master的ip
+systemctl restart salt-master  --重启服务
+systemctl restart salt-syndic   --重启服务,sydnc就可以去找高级master了
+这个时候192.168.56.12变成syndic了
+vim /etc/salt/master：
+order_masters: True  --开启高级Master 
+systemctl restart salt-master
+##top master和syndic的工作流程：
 发：top master-->syndic-->master-->minion1,minion2
 收：minion1,minion2-->syndic,master-->top master
 syndic的file_roots和pillar_roots必须和top master高度一致(用共享或git来保持)
@@ -2195,24 +2190,12 @@ return:
     user: saltapi
   tag: salt/wheel/20190108150750623661
 
-
-资料：
+#资料：
 www.github.com/binbin91/oms
 oms系统:
 git clone --depth 1 https://www.github.com/binbin91/oms
 saltshaker系统:
 https://github.com/yueyongyue/saltshaker
-
-
-
-
-
-
-
-
-
-
-
 
 
 </pre>
