--- a/1.Cobbler.md
+++ b/1.Cobbler.md
@@ -27,9 +27,7 @@
 ###主机名命名规范：
 
 **机房名称-项目-角色-集群-节点.域名**
-
 例子：
-
 	idc01-xxshop-nginx-bj-node1.shop.com
 
 ###服务启动用户规范：
@@ -53,10 +51,11 @@
 ###工具化：
 	1.Shell脚本（功能性（流程）脚本、检查性脚本、报表性脚本）
 	2.开源工具：（Zabbix(监控)、ELKStack(日志收集和分析)、SaltStack(批量管理和配置管理)、Cobbler自动化安装的）(目的自动化)
-	目标：1.促进标准化的实施
-	          2.将重复的操作简单化
-	          3.将多次操作流程化
-	          4.减少人为操作的低效和降低故障率
+	目标：
+		1.促进标准化的实施
+	    2.将重复的操作简单化
+	    3.将多次操作流程化
+	    4.减少人为操作的低效和降低故障率
 	 工具化和标准化是好基友！
 痛点：
 	1.你至少要ssh到服务器执行。可能犯错
@@ -99,7 +98,6 @@
 自动化扩容：
 		1.zabbix触发Action
 触发：
-
 	1.当某个集群的访问量超过最大支撑量，比如10000
 	2.并持续5分钟
 	3.不是攻击
@@ -110,7 +108,6 @@
 	6.数据库是否可以支撑当前并发
 	7.当前自动化扩展队列，是否有正在扩容的节点
 	8.其它业务相关的。
-
 		之前：先判断Buffer是否有最近X小时之前，已经创建过的移除虚拟机，并查询软件版本是否和当前一致，
 		如果一致则跳过234步骤，如果不一致则跳过23
 		2.Openstack	创建虚拟机
@@ -119,9 +116,7 @@
 		5.测试服务是否可用（如果不可用，实力补时5秒，实力补时30秒，还是不可用则提示扩容失败并退出）
 		6.加入集群
 		7.通知（短信、邮件）
-
 自动化缩容：
-
 	1. 触发条件和决策
 	2. 从集群中移除节点-关闭监控-移除
 	3. 通知
@@ -133,7 +128,6 @@
 	ITSM是ITIL的前身：
 	ITIL（IT基础架构库）：不是硬件也不是软件，是一个可以直接使用的标准
 ITIL目的：
-
 	1. 将IT管理工作标准化，模式化。减少人为误操作带来的隐患
 	2. 通过服务目录，服务报告，告诉业务部门，我们可以做什么，做了什么。
 	3. 通过系列流程，知识库减轻对英雄式工程师的依赖，把经验积累下来。
@@ -141,11 +135,9 @@ ITIL目的：
 ITIL（个人）和ISO20000（机构）
 
 运维经理和运维总监：服务管理(ITIL)和项目管理(PMP)
-
 戴明环（PDCA）:P计划(planing)——D实施(do)——C检查(check)——A处理(act)
 
 ITIL：
-
 	成为一名运维经理：
 		技术：
 			运维知识体系
@@ -154,7 +146,6 @@ ITIL：
 			2.项目管理  PMP
 		做人（有时比其他还重要）
 ITIL v3将ITIL理论分成了五部分
-	
 	1.服务战略
 	2.服务设计
 	3.服务转换
@@ -162,23 +153,18 @@ ITIL v3将ITIL理论分成了五部分
 	5.持续服务改进
 
 服务运营(和运维技术最近)：
-
 	SLA:服务级别协议
 	OLA:运营水平协议
 	CSF:关键成功因素
 	KPI：关键绩效指标（来考核年终奖）
 服务台：客户与技术沟通的钮带
-
 服务运营：故障管理：输入输出
-
 所以流程都要有输入输出：
-
 	输入：
 		故障请求提交
 	输出：
 		故障分类汇总统计表
 服务运营：问题管理
-
 
 ###自动化装机平台安装：
 ####1.Cobbler自动化部署流程：
@@ -197,7 +183,7 @@ yum install httpd dhcp tftp cobbler cobbler-web pykickstart xinetd –y
 #####安装步骤：注：cobbler安装centos7内存最低要求为2G
 1.	systemctl start httpd
 2.	systemctl start cobbler
-3.	关闭selinux
+3.	关闭selinux和iptables
 4.	第一步执行cobbler 	check检查
 1 : debmirror package is not installed, it will be required to manage debian deployments and repositories
 2 : fencing tools were not found, and are required to use the (optional) power management features. install cman or fence-agents to use them
@@ -205,12 +191,16 @@ yum install httpd dhcp tftp cobbler cobbler-web pykickstart xinetd –y
 5.	vim /etc/cobbler/settings 
 next_server 192.168.1.237(为TFTP主机)
 server: 192.168.1.237(为cobbler主机)
-manage_dhcp: 1   （设置为可用cobbler dhcp模板文件管理设置dhcp）
-6.	将/etc/xinetd.d/tftp中的disable设为no
+manage_dhcp: 1   （设置cobbler使用dhcp模板文件管理设置dhcp）
+6.	将/etc/xinetd.d/tftp中的disable设为no #因为设置了tftp所以这里要开启tftp
 7.	cobbler get-loaders  运行获取cobbler所需的文件
-8.	重启cobbler的服务
+[root@autodep ~]# systemctl enable rsyncd
+[root@autodep ~]# systemctl start rsyncd
+[root@autodep ~]# systemctl start xinetd
+[root@autodep ~]# systemctl enable xinetd
+8.	systemctl restart cobblerd  #重启cobbler的服务
 9.	openssl passwd -1 -salt 'cobbler' 'cobbler888' 生成加密密码，并在/etc/cobbler/settings将default_password_crypted 值设为刚才生成的加密密码，此密码为自动化部署成功后root密码,'cobbler888'为设置后的密码，'cobbler'为描述信息
-10.	vim /etc/cobbler/dhcp.template ，替换设置如下：
+10.	vim /etc/cobbler/dhcp.template ，替换如下内容：
 subnet 192.168.1.0 netmask 255.255.255.0 {
      option routers             192.168.1.254;
      option domain-name-servers 114.114.114.114;
@@ -285,58 +275,45 @@ Koan –-server=192.168.1.237 --list=profiles  查看可以重装的系统</pre>
 2. Koan --replace-self --server=192.168.1.237 --profile=CentOS6-x86_64  tftp客户端自动安装指定系统版本
 3. Cobbler网页管理:https://192.168.1.237/cobbler_web用户名和密码默认都是:cobbler
 4. 修改cobbler网页版默认密码：htdigest /etc/cobbler/users.digest  "Cobbler" cobbler（“Cobbler”为用户描述信息，cobbler为要改密码的用户名）
-5. vim /etc/cobbler/pxe/pxedefault.template   更改自动部署提示信息并设置默认从哪个盘启动，都在此目录
+5. vim /etc/cobbler/pxe/pxedefault.template   #更改自动部署提示信息并设置默认从哪个盘启动，都在此目录
 ####用cobbler来创建yum源：
 1. [root@localhost cobbler]#cobbler repo add --name=openstack-rocky --mirror=https://mirrors.aliyun.com/centos/7.5.1804/cloud/x86_64/openstack-rocky/ --arch=x86_64 --breed=yum  
+[root@autodep kickstarts]# cobbler repo add --name=epel --mirror=https://mirrors.aliyun.com/epel/epel-release-latest-7.noarch.rpm --arch=x86_64 --breed=yum
 2. 同步新创建的openstack-rocky --yum源到/etc/yum.repo.d/下:Cobbler reposync（此步骤客户端才会自动同步，服务端不会自动同步，需要自己从/var/www/cobbler/ks_mirror/下复制一份config.repo到/etc/yum.repo.d/下）
 3. 将新建的openstack源添加到kickstack中，使以后新装的Centos7系统自动加入新建立的源：Cobbler profile edit --name= CentOS-7-X86_64-x86_64 --repos=”openstack-rocky”或者Cobbler profile edit --name= CentOS-7-X86_64-x86_64 --repos=” https://mirrors.aliyun.com/centos/7.5.1804/cloud/x86_64/openstack-rocky/”（前提要在/etc/cobbler/settings中要把yum_post_install_mirror设置成为1，使其为开启状态，并且还要在你自定义的kickstart文件中【/var/lib/cobbler/kickstarts/CentOS-7-x86_64.cfg】在最后加入这个配置$yum_config_stanza才能使用户在自动化安装系统时生效）
+#注：reposync要同步成功，repo源必须为repodata结尾，一个连接地址是不行的，因为需要同步rpm包到本地
 4. 例：
-<pre>
 	%post
 	systemctl disable postfix.service
 	$yum_config_stanza
 	%end
 然后同步：cobbler  reposync
-</pre>
 
 5.新购买服务器接入装机vlan后自动化安装并设置网络、主机名信息：
-cobbler system add --name=jackli-centos7 --mac=00:50:56:ad:0a:bf --profile=CentOS-7-X86_64-x86_64 --ip-address=192.168.1.100 --subnet=255.255.255.0 --gateway=192.168.1.254 --interface=eth0 --name-servers=114.114.114.114 --static=1 --hostname=jackli-centos7 --kickstart=/var/lib/cobbler/kickstarts/CentOS-7-x86_64.cfg
+[root@autodep yum.repos.d]# cobbler system add --name=cobbler.jack.com --mac=00:50:56:ad:36:65 --profile=CentOS-7.6-DVD-1810.iso-x86_64 --ip-address=192.168.1.237 --subnet=255.255.255.0 --gateway=192.168.1.254 --interface=eth0 --name-servers=114.114.114.114 --static=1 --hostname=cobbler.jack.com --kickstart=/var/lib/cobbler/kickstarts/CentOS-7.6-DVD-1810.iso-x86_64.ks
 Cobbler system list 查看指定mac地址配置的主机设置列表
 Cobbler sync
+
 ####网卡绑定：
 绑定也称为中继或组合。不同的供应商使用不同的名 它用于将多个物理接口连接到一个逻辑接口，以实现冗余和/或性能。
 您可以设置绑定，将接口eth0和eth1连接到故障转移（主动 - 备份）接口bond0，如下所示：
-
 1. $ cobbler system edit --name=foo --interface=eth0 --mac=AA:BB:CC:DD:EE:F0 --interface-type=bond_slave --interface-master=bond0
-
 2. $ cobbler system edit --name=foo --interface=eth1 --mac=AA:BB:CC:DD:EE:F1 --interface-type=bond_slave --interface-master=bond0
 3. $ cobbler system edit --name=foo --interface=bond0 --interface-type=bond --bonding-opts="miimon=100 mode=1" --ip-address=192.168.1.100 --netmask=255.255.255.0
 您可以指定任何您想要的绑定选项，因此如果您不熟悉Linux可以支持的各种绑定模式，请阅读内核文档。
 
-
-
-
-
-##系统初始化规范
-
 ###初始化操作
-
 * 设置DNS	192.168.56.111 192.168.56.112
 * 安装Zabbix Agent:	Zabbix Server 192.168.56.112
 * 安装Saltstack Minion: Saltstack Master:192.168.56.11
 
-
 ###目录规范
-
 * 脚本放置目录：/opt/shell
 * 脚本日志目录：/opt/shell/log
 * 脚本锁文件目录：/opt/shell/lock
 
-
 ###程序服务安装规范
-
 1.源码安装路径：/usr/local/appname.vsesion
 2.创建软连接：ln -s /usr/local/appname.version /usr/local/appname
-
 
 </pre>
