--- a/1.Cobbler.md
+++ b/1.Cobbler.md
@@ -1,4 +1,4 @@
-﻿#操作系统安装流程及系统初始化规范
+#操作系统安装流程及系统初始化规范
 
 <pre>
 ##操作系统安装规范
@@ -220,6 +220,7 @@ cobbler profile edit --name=CentOS-7-x86_64 --kopts='net.ifnames=0 biosdevname=0
 15. cobbler sync  同步更改后的配置
 ####CentOS-7-x86_64.cfg（kickstart配置文件参数）：
 <pre>
+[root@autodep kickstarts]# cat CentOS-7.6-DVD-1810.iso-x86_64.ks 
 lang en_US
 keyboard us
 timezone Asia/Shanghai
@@ -231,7 +232,6 @@ bootloader --location=mbr
 zerombr
 clearpart --all --initlabel
 part /boot --fstype xfs --size 1024 --ondisk sda
-part swap --size 16384 ondisk sda   -----此行有错误可注释
 part / --fstype xfs --size 1 --grow --ondisk sda
 auth --useshadow --enablemd5
 $SNIPPET('network_config')
@@ -247,8 +247,9 @@ $SNIPPET('pre_anamon')
 %end
 
 %packages
-@ base
-@ core
+@base
+@core
+tree
 sysstat
 iptraf
 ntp
@@ -263,6 +264,37 @@ screen
 %end
 %post
 systemctl disable postfix.service
+
+rm -f /etc/yum.repos.d/*
+cat >>/etc/yum.repos.d/epel.repo<<eof  #这个cat..eof在%post中只能使用一次,变量内容需要转义，否则会报错
+[epel]
+name=Extra Packages for Enterprise Linux 7 - \$basearch
+#baseurl=http://download.fedoraproject.org/pub/epel/7/\$basearch
+metalink=https://mirrors.fedoraproject.org/metalink?repo=epel-7&arch=\$basearch
+failovermethod=priority
+enabled=1
+gpgcheck=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-7
+
+[epel-debuginfo]
+name=Extra Packages for Enterprise Linux 7 - \$basearch - Debug
+#baseurl=http://download.fedoraproject.org/pub/epel/7/\$basearch/debug
+metalink=https://mirrors.fedoraproject.org/metalink?repo=epel-debug-7&arch=\$basearch
+failovermethod=priority
+enabled=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-7
+gpgcheck=1
+
+[epel-source]
+name=Extra Packages for Enterprise Linux 7 - \$basearch - Source
+#baseurl=http://download.fedoraproject.org/pub/epel/7/SRPMS
+metalink=https://mirrors.fedoraproject.org/metalink?repo=epel-source-7&arch=\$basearch
+failovermethod=priority
+enabled=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-7
+gpgcheck=1
+eof
+
 $yum_config_stanza
 %end
 </pre>
